--- a/index.html
+++ b/index.html
@@ -4,8 +4,82 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
+    .row1{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: brown;
+      height: 80px;
+    }
+    .row1 h1{
+      padding: 20px;
+      color: white;
+      font-size: 40px;
+    }
+    a{
+      text-decoration: none;
+      color: white;
+      padding: 10px;
+    }
+    img{
+      height: 300px;
+      border: solid black 5px;
+    }
+    a:hover{
+
+    }
+    .row2{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 70px;
+    }
+    .row2 img{
+      margin: 50px;
+    }
+    .profile{
+      width: 400px;
+    }
+    .profile h2{
+      font-size: 50px;
+    }
+    .profile p{
+      font-size: 15px;
+    }
+
+  </style>
 </head>
 <body>
-  <a href="mystore.html">Click</a>
+  <div>
+    <div class="row1">
+      <h1>SAI BHASKAR</h1>
+      <div>
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">Services</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
+
+    <div class="row2">
+      <div class="profile">
+        <h2>Full Stack Developer</h2>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur officiis, quas architecto sunt dolore ab voluptas error, ut, sapiente eaque assumenda molestias in sequi ducimus harum laboriosam nesciunt a delectus.</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quia itaque voluptatum quod minus eos cum laudantium fuga dolor, sunt quam repudiandae molestias perspiciatis aperiam aspernatur dolore, culpa similique qui.</p>
+      </div>
+      <div><img src="sai bhaskar1.jpg"></div>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </body>
 </html>
