--- a/index.html
+++ b/index.html
@@ -3,91 +3,209 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sai Bhaskar - Full Stack Developer</title>
     <style>
+      /* Reset default margin and padding */
       * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
       }
+
+      /* Header styling */
       .row1 {
         display: flex;
         align-items: center;
         justify-content: space-between;
         background-color: brown;
         height: 80px;
+        padding: 0 20px;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
       }
+
       .row1 h1 {
-        padding: 20px;
         color: white;
         font-size: 40px;
       }
-      a {
+
+      .row1 a {
         text-decoration: none;
         color: white;
         padding: 10px;
+        font-size: 18px;
       }
-      img {
-        height: 300px;
-        border: solid black 5px;
+
+      .row1 a:hover {
+        color: black;
+        background-color: rgba(255, 255, 255, 0.2);
+        border-radius: 5px;
       }
-      a:hover {
-      }
+
+      /* Main content styling */
       .row2 {
         display: flex;
         align-items: center;
         justify-content: center;
         margin: 70px;
       }
+
       .row2 img {
+        height: 300px;
+        border: solid black 5px;
         margin: 50px;
       }
+
       .profile {
         width: 400px;
       }
+
       .profile h2 {
         font-size: 50px;
+        margin-bottom: 20px;
       }
+
       .profile p {
         font-size: 15px;
+        line-height: 1.6;
+        margin-bottom: 20px;
+      }
+
+      /* Projects section styling */
+      .row3 {
+        padding: 50px 20px;
+        background-color: #f4f4f4;
+        text-align: center;
+      }
+
+      .row3 .title {
+        font-size: 40px;
+        margin-bottom: 40px;
+        color: brown;
+      }
+
+      .row3 div {
+        margin: 20px 0;
+      }
+
+      .row3 a {
+        text-decoration: none;
+        color: brown;
+        font-size: 20px;
+        padding: 10px 20px;
+        border: 2px solid brown;
+        border-radius: 5px;
+        transition: background-color 0.3s, color 0.3s;
+      }
+
+      .row3 a:hover {
+        background-color: brown;
+        color: white;
       }
     </style>
   </head>
   <body>
-    <div>
-      <div class="row1">
-        <h1>SAI BHASKAR</h1>
-        <div>
-          <a href="#">Home</a>
-          <a href="#">Projects</a>
-          <a href="#">Services</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-        </div>
-      </div>
+    <!-- Header Section -->
+    <header class="row1">
+      <h1>SAI BHASKAR</h1>
+      <nav>
+        <a href="#row2">Home</a>
+        <a href="#row3">Projects</a>
+        <a href="#">Services</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
 
-      <div class="row2">
-        <div class="profile">
-          <h2>Full Stack Developer</h2>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            officiis, quas architecto sunt dolore ab voluptas error, ut,
-            sapiente eaque assumenda molestias in sequi ducimus harum laboriosam
-            nesciunt a delectus.
-          </p>
-          <br />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus
-            quia itaque voluptatum quod minus eos cum laudantium fuga dolor,
-            sunt quam repudiandae molestias perspiciatis aperiam aspernatur
-            dolore, culpa similique qui.
-          </p>
-        </div>
-        <div><img src="sai bhaskar1.jpg" /></div>
+    <section id="row2" class="row2">
+      <div class="profile">
+        <h2>Full Stack Developer</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+          officiis, quas architecto sunt dolore ab voluptas error, ut, sapiente
+          eaque assumenda molestias in sequi ducimus harum laboriosam nesciunt a
+          delectus.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus quia
+          itaque voluptatum quod minus eos cum laudantium fuga dolor, sunt quam
+          repudiandae molestias perspiciatis aperiam aspernatur dolore, culpa
+          similique qui.
+        </p>
       </div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+      <div>
+        <img src="sai bhaskar1.jpg" alt="Sai Bhaskar - Full Stack Developer" />
+      </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="row3" class="row3">
+      <div class="title">Projects</div>
+      <div class="p1">
+        <a href="p1.html">Project 1</a>
+      </div>
+      <div class="p2">
+        <a href="p2.html">Project 2</a>
+      </div>
+      <div class="p3">
+        <a href="p3.html">Project 3</a>
+      </div>
+    </section>
+
+    <!-- GSAP Animation Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+      // GSAP Animation for Header
+      gsap.from(".row1", {
+        duration: 1,
+        y: -100,
+        opacity: 0,
+        ease: "power2.out",
+      });
+
+      // GSAP Animation for Profile Section
+      gsap.from(".profile", {
+        duration: 1,
+        x: -100,
+        opacity: 0,
+        delay: 0.5,
+        ease: "power2.out",
+      });
+
+      // GSAP Animation for Image
+      gsap.from(".row2 img", {
+        duration: 1,
+        x: 100,
+        opacity: 0,
+        delay: 0.5,
+        ease: "power2.out",
+      });
+
+      // GSAP Animation for Projects Section
+      gsap.from(".row3", {
+        scrollTrigger: {
+          trigger: ".row3",
+          start: "top 80%",
+        },
+        opacity: 0,
+        y: 50,
+        duration: 1,
+        ease: "power2.out",
+      });
+    </script>
+
+    <!-- Smooth Scrolling Script -->
+    <script>
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          document.querySelector(this.getAttribute("href")).scrollIntoView({
+            behavior: "smooth",
+          });
+        });
+      });
+    </script>
   </body>
 </html>
